Fix the z-index to render dropdown properly

--- a/src/components/Events/style.scss
+++ b/src/components/Events/style.scss
@@ -64,10 +64,10 @@
 
   .checkin-button {
     position: fixed;
-    top: 80px; 
+    top: 80px;
     top: 80px;
     right: 20px;
-    z-index: 10;
+    z-index: 8;
   }
 
   h1 {
